fix cards alignment

--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -449,10 +449,17 @@
   height: 100vh;
 }
 .d-flex {
-  display: flex;
+  display: flex!important;
   align-items: center;
 }
-
+.flex{
+  display: flex!important;
+}
+.align-items-stretch {
+  -webkit-box-align: stretch!important;
+  -ms-flex-align: stretch!important;
+  align-items: stretch!important;
+}
 /* home-service-area */
 .home-service-area {
   overflow: hidden;
